--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="app_name">GitDroid</string>
     <string name="commandPrompt">enter command</string>
     <string name="enterPrompt">Enter</string>
+    <string name="openingOutput">== gitdroid ==</string>
 
 </resources>
